CRUD sur User fonctionnel! :D
Avec les routes etc! :D

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -377,19 +377,8 @@ db {
   #default.logSql=true
 }
 
-slick.dbs {
-  default {
-    profile = "slick.jdbc.MySQLProfile$"
-    db {
-      driver = "com.mysql.jdbc.Driver"
-      url = "jdbc:mysql://localhost:3307/beerPass"
-      user = "beerPass"
-      password = "beerPass"
-
-      // Variables d'environnement
-      url = ${?DB_URL}
-      user = ${?DB_USER}
-      password = ${?DB_PWD}
-    }
-  }
-}
+slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
+slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.url = "jdbc:mysql://localhost/beerPass"
+slick.dbs.default.db.user = "beerPass"
+slick.dbs.default.db.password = "beerPass"
