update du fichier sql, entre autres

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: '3.1'
 
 services:
+  backend:
+    #restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 9000:9000
+    depends_on:
+      - mysql
+
   mysql:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
@@ -8,41 +18,23 @@ services:
     ports:
       - 3306:3306
     environment:
-      MYSQL_ROOT_PASSWORD: beerPassRoot
+      MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: beerPass
       MYSQL_PASSWORD: beerPass
       MYSQL_DATABASE: beerPass
-    networks:
-      - mysql_network
-    labels:
-      - "traefik.enable=false"
 
   phpmyadmin:
     image: phpmyadmin/phpmyadmin
     restart: always
+    ports:
+      - 8888:80
     environment:
-      MYSQL_ROOT_PASSWORD: beerPassRoot
-      MYSQL_USER: beerPass
-      MYSQL_PASSWORD: beerPass
-    networks:
-      - traefik_network
-      - mysql_network
+      PMA_HOST: beerPass
+      MYSQL_ROOT_PASSWORD: root
+    depends_on:
+      - mysql
     volumes:
       - mysqlDatabase:/var/lib/mysql
-    expose:
-      - "8888"
-    labels:
-      - "traefik.backend=phpmyadmin"
-      - "traefik.enable=true"
-      - "traefik.frontend.rule=Host:chic.iict.ch; PathPrefixStrip: /phpmyadmin"
-      - "traefik.port=8888"
-      - "traefik.docker.network=traefik_network"
 
 volumes:
   mysqlDatabase:
-
-networks:
-  traefik_network:
-    external: true
-  mysql_network:
-    external: false
