--- a/conf/application.conf
+++ b/conf/application.conf
@@ -376,9 +376,13 @@ db {
   # https://www.playframework.com/documentation/latest/Highlights25#Logging-SQL-statements
   #default.logSql=true
 }
-
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost/beerPass"
-slick.dbs.default.db.user = "beerPass"
-slick.dbs.default.db.password = "beerPass"
+slick.dbs.default.db.user = "root"
+slick.dbs.default.db.password = "root"
+
+// Env variables
+slick.dbs.default.db.url = ${?DB_URL}
+slick.dbs.default.db.user = ${?DB_USER}
+slick.dbs.default.db.password = ${?DB_PWD}
