--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,10 @@ services:
       - 9000:9000
     depends_on:
       - mysql
+    environment:
+      DB_URL: "jdbc:mysql://mysql/beerPass"
+      DB_USER: "root"
+      DB_PWD: "root"
 
   mysql:
     image: mysql
@@ -19,20 +23,9 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: beerPass
       MYSQL_USER: beerPass
       MYSQL_PASSWORD: beerPass
-      MYSQL_DATABASE: beerPass
-
-  phpmyadmin:
-    image: phpmyadmin/phpmyadmin
-    restart: always
-    ports:
-      - 8888:80
-    environment:
-      PMA_HOST: beerPass
-      MYSQL_ROOT_PASSWORD: root
-    depends_on:
-      - mysql
     volumes:
       - mysqlDatabase:/var/lib/mysql
 
