connection à une DB online

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -378,9 +378,9 @@ db {
 }
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost/beerPass"
-slick.dbs.default.db.user = "root"
-slick.dbs.default.db.password = "root"
+slick.dbs.default.db.url = "jdbc:mysql://sql7.freesqldatabase.com:3306/sql7294077"
+slick.dbs.default.db.user = "sql7294077"
+slick.dbs.default.db.password = "aHpRVTlxU7"
 
 // Env variables
 slick.dbs.default.db.url = ${?DB_URL}
