--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,7 +40,7 @@ akka {
 # ~~~~~
 # The secret key is used to sign Play's session cookie.
 # This must be changed for production, but we don't recommend you change it in this file.
-play.http.secret.key = "IEs--L*yzDZ9hc\#kquAPu#R@2AauH!"
+play.http.secret.key = ${?APPLICATION_SECRET}
 
 ## Modules
 # https://www.playframework.com/documentation/latest/Modules
