--- a/conf/application.conf
+++ b/conf/application.conf
@@ -102,7 +102,7 @@ play.filters {
   # enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
-  #disabled += filters.ExampleFilter
+  disabled += play.filters.hosts.AllowedHostsFilter
 }
 
 ## Play HTTP settings
@@ -309,7 +309,7 @@ play.filters {
   hosts {
     # Allow requests to example.com, its subdomains, and localhost:9000.
     #allowed = [".example.com", "localhost:9000"]
-    allowed = ["https://beerpass-scala.herokuapp.com"]
+    # allowed = ["https://beerpass-scala.herokuapp.com"]
   }
 }
 
