--- a/conf/application.conf
+++ b/conf/application.conf
@@ -379,9 +379,9 @@ db {
 }
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://sql7.freesqldatabase.com:3306/sql7294077"
-slick.dbs.default.db.user = "sql7294077"
-slick.dbs.default.db.password = "aHpRVTlxU7"
+slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/beerPass"
+slick.dbs.default.db.user = "beerPass"
+slick.dbs.default.db.password = "beerPass"
 
 // Env variables
 slick.dbs.default.db.url = ${?DB_URL}
