--- a/conf/application.conf
+++ b/conf/application.conf
@@ -379,7 +379,7 @@ db {
 }
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
 slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
-slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/beerPass"
+slick.dbs.default.db.url = "jdbc:mysql://127.0.0.1:3306/beerPass"
 slick.dbs.default.db.user = "beerPass"
 slick.dbs.default.db.password = "beerPass"
 
