--- a/conf/application.conf
+++ b/conf/application.conf
@@ -378,7 +378,7 @@ db {
   #default.logSql=true
 }
 slick.dbs.default.profile = "slick.jdbc.MySQLProfile$"
-slick.dbs.default.db.driver = "com.mysql.jdbc.Driver"
+slick.dbs.default.db.driver = "com.mysql.cj.jdbc.Driver"
 slick.dbs.default.db.url = "jdbc:mysql://localhost:3306/beerPass"
 slick.dbs.default.db.user = "beerPass"
 slick.dbs.default.db.password = "beerPass"
