désactivation du CORS

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -103,6 +103,7 @@ play.filters {
 
   # Disabled filters remove elements from the enabled list.
   disabled += play.filters.hosts.AllowedHostsFilter
+  disabled += play.filters.cors.CORSFilter
 }
 
 ## Play HTTP settings
