--- a/conf/application.conf
+++ b/conf/application.conf
@@ -104,6 +104,8 @@ play.filters {
   # Disabled filters remove elements from the enabled list.
   disabled += play.filters.hosts.AllowedHostsFilter
   disabled += play.filters.cors.CORSFilter
+  disabled += play.filters.csrf.CSRFFilter
+  disabled += play.filters.headers.SecurityHeadersFilter
 }
 
 ## Play HTTP settings
