désactivation du CORS........ -_-''

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -102,10 +102,6 @@ play.filters {
   # enabled += filters.ExampleFilter
 
   # Disabled filters remove elements from the enabled list.
-  disabled += play.filters.hosts.AllowedHostsFilter
-  disabled += play.filters.cors.CORSFilter
-  disabled += play.filters.csrf.CSRFFilter
-  disabled += play.filters.headers.SecurityHeadersFilter
 }
 
 ## Play HTTP settings
@@ -280,6 +276,13 @@ play.filters {
 
     # Defaults to CSRFErrorHandler in the root package.
     #errorHandler = MyCSRFErrorHandler
+
+    header.bypassHeaders {
+      X-Requested-With = "*"
+      Csrf-Token = "nocheck"
+    }
+
+    bypassCorsTrustedOrigins = false
   }
 
   ## Security headers filter configuration
@@ -301,7 +304,7 @@ play.filters {
     #permittedCrossDomainPolicies = "master-only"
 
     # The Content-Security-Policy header. If null, the header is not set.
-    #contentSecurityPolicy = "default-src 'self'"
+    contentSecurityPolicy = null
   }
 
   ## Allowed hosts filter configuration
