--- a/conf/application.conf
+++ b/conf/application.conf
@@ -235,6 +235,7 @@ play.filters {
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
+  disabled += play.filters.hosts.AllowedHostsFilter
 }
 
 ## Filter Configuration
