--- a/conf/application.conf
+++ b/conf/application.conf
@@ -257,10 +257,13 @@ play.filters {
     #pathPrefixes = ["/some/path", ...]
 
     # The allowed origins. If null, all origins are allowed.
-    #allowedOrigins = ["http://www.example.com"]
+    allowedOrigins = null
 
     # The allowed HTTP methods. If null, all methods are allowed
-    #allowedHttpMethods = ["GET", "POST"]
+    allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
+
+	# allow all headers
+    allowedHttpHeaders = null
   }
 
   ## CSRF Filter
