--- a/conf/application.conf
+++ b/conf/application.conf
@@ -232,10 +232,12 @@ play.filters {
   # Enabled filters are run automatically against Play.
   # CSRFFilter, AllowedHostFilters, and SecurityHeadersFilters are enabled by default.
   # enabled += filters.ExampleFilter
+  enabled += play.filters.cors.CORSFilter
 
   # Disabled filters remove elements from the enabled list.
   #disabled += filters.ExampleFilter
   disabled += play.filters.hosts.AllowedHostsFilter
+  disabled += play.filters.csrf.CSRFFilter
 }
 
 ## Filter Configuration
@@ -261,9 +263,6 @@ play.filters {
 
     # The allowed HTTP methods. If null, all methods are allowed
     allowedHttpMethods = ["GET", "POST", "PUT", "DELETE"]
-
-	# allow all headers
-    allowedHttpHeaders = null
   }
 
   ## CSRF Filter
