--- a/ScalaFrontEnd/package.json
+++ b/ScalaFrontEnd/package.json
@@ -1,16 +1,17 @@
 {
-  "name": "test",
+  "name": "scala-frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-  "@material-ui/core": "^4.0.2",
+    "@material-ui/core": "^4.0.2",
     "@material-ui/icons": "^4.0.1",
-	"leaflet": "^1.5.1",
-	"react-dom": "^16.8.6",
-    "react-leaflet": "^2.3.0",
-    "react-router-dom": "^5.0.1",
+    "google-maps-react": "^2.0.2",
+    "leaflet": "^1.5.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-leaflet": "^2.3.0",
+    "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1"
   },
   "scripts": {
@@ -33,5 +34,12 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^5.16.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-react": "^7.13.0"
   }
 }
