--- a/ScalaAppMobile/package.json
+++ b/ScalaAppMobile/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/samples": "2.1.1",
+    "@expo/vector-icons": "^10.0.2",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
@@ -19,8 +20,11 @@
     "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-react": "^7.13.0",
     "expo": "^32.0.0",
+    "lottie-react-native": "^2.6.1",
+    "prop-types": "^15.7.2",
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "react-native-animated-loader": "^0.0.7",
     "react-native-qrcode": "^0.2.7",
     "react-native-qrcode-svg": "^5.1.2",
     "react-native-snap-carousel": "^3.7.5",
